<resources>
    <string name="app_name">Connecting Thoughts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="SIGN_UP_TEXT">New to Connecting Thoughts ? Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="SELECT_GENRE">Choose Genre</string>
    <string name="SELECT_LANGUAGE">Language</string>
    <string name="SOME_MORE_DETAIL">Some Extra Detail</string>
    <string name="PUBLISH">PUBLISH</string>
    <string name="ABOUT_STORY">Tell your readers about story in 30 - 50 words.</string>
    <string name="SHARE">Share</string>
    <string name="ADD_TO_LIBRARY">Add To Library</string>
    <string name="REPORT">Report</string>
    <string name="COPYRIGHT_ISSUE">Copyright issue</string>
    <string name="GARBAGE_CONTANT">Garbage content and unrelated to connecting thoughts</string>
    <string name="INAPPROPRIATE_CONTENT">Inappropriate content</string>
    <string name="SAVE">Save</string>
    <string name="PLEASE_ENTER_YOUR_NAME">Please enter your name so that people can identify you.</string>
    <string name="ENTER_NAME">Enter Name</string>
    <string name="HIDE_YOUR_IDENTITY">Do you wanna hide your identity in this story ?</string>
    <string name="WHAT_IS_PURPOSE_OF_CT_1">Connecting Thought is an online platform where people can write And publish their creation.</string>
    <string name="WHAT_IS_PURPOSE_OF_CT_2">The main objective of Connecting Thought is to provide people with a platform where people can share stories of their struggles,
        their successes, their accomplishments, their losses, their memories and their life experiences.</string>
    <string name="WHAT_IS_PURPOSE_OF_CT_3">In Connecting Thought, people meet people of the same type of thinking.</string>
    <string name="WHAT_IS_PURPOSE_OF_CT_4">If you want to help in any way to grow this community, then welcome to our team.</string>
    <string name="send_MAIL_TO_US">Send mail to us</string>
    <string name="WHAT_IS_PURPOSE_OF_CT_5">If you want to give us financial support, click on this button.</string>
    <string name="FINIANCIAL_SUPPORT">Financial support</string>
    <string name="READ_SETTING">Read setting</string>
</resources>