<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/read_setting"
        android:icon="@drawable/ic_format_size"
        android:title="@string/READ_SETTING"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/add_to_libray"
        android:orderInCategory="100"
        android:icon="@drawable/ic_round_add_button"
        android:title="@string/ADD_TO_LIBRARY" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_16_white"
        android:title="@string/SHARE"
        android:orderInCategory="100"
         />

    <item
    android:id="@+id/report"
    android:orderInCategory="100"
        android:icon="@drawable/ic_report_symbol"
    android:title="@string/REPORT" />



</menu>